fix: table scrollbar default

--- a/src/components/ComponentDocs/component-docs.scss
+++ b/src/components/ComponentDocs/component-docs.scss
@@ -3,7 +3,7 @@
   max-width: calc(100% + 2rem);
   overflow-x: scroll;
   @include carbon--breakpoint('md') {
-    overflow-x: auto;
+    overflow-x: visible;
   }
 }
 
